# newsletter-generation

./: .gitignore  Dockerfile.backend  Dockerfile.frontend  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/newsletter/: __init__.py  main.py
backend/newsletter/api/: app.py
backend/newsletter/utils/: api_utils.py  format_video_summary_utils.py  html_utils.py  reddit_format_utils.py  reddit_scraper_utils.py  youtube_format_utils.py  youtube_scraper_utils.py
backend/test/: test_api.py
frontend/: package.json  run_deployment_test.sh
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/generate/: route.ts
frontend/src/app/api/generate/reddit/: route.ts
frontend/src/app/api/generate/youtube/: route.ts
frontend/src/components/: Header.tsx  I3Logo.tsx
ui/: package-lock.json  tailwind.config.ts
ui/src/app/: page.tsx
